# isro_ros2

./: .gitattributes  .gitignore  README.md
ORB_SLAM3/: CMakeLists.txt  f_dataset-MH01_stereo.txt  kf_dataset-MH01_stereo.txt
ORB_SLAM3/Examples/Monocular/: .CameraTrajectory.txt.swp  CameraTrajectory.txt  KeyFrameTrajectory.txt  mono_euroc  mono_euroc.cc  mono_kitti  mono_tum  mono_tum_vi
ORB_SLAM3/Examples/Monocular-Inertial/: .mono_inertial_euroc.cc.swp  mono_inertial_euroc  mono_inertial_tum_vi
ORB_SLAM3/Examples/RGB-D/: rgbd_tum
ORB_SLAM3/Examples/Stereo/: CameraTrajectory.txt  KeyFrameTrajectory.txt  stereo_euroc  stereo_euroc.cc  stereo_kitti  stereo_tum_vi
ORB_SLAM3/Examples/Stereo-Inertial/: stereo_inertial_euroc  stereo_inertial_tum_vi
ORB_SLAM3/Examples_old/Monocular/: mono_euroc_old  mono_kitti_old  mono_tum_vi_old
ORB_SLAM3/Examples_old/Monocular-Inertial/: mono_inertial_tum_vi_old
ORB_SLAM3/Examples_old/RGB-D/: rgbd_tum_old
ORB_SLAM3/Examples_old/Stereo/: stereo_euroc_old  stereo_kitti_old  stereo_tum_vi_old
ORB_SLAM3/Examples_old/Stereo-Inertial/: stereo_inertial_euroc_old
ORB_SLAM3/evaluation/: .evaluate_ate_scale.py.swp
ORB_SLAM3/include/: .Frame.h.swp
ORB_SLAM3/src/: Tracking.cc
camera_calib/: camera_calib.py
ros2_try/isro_ws/: settings.yaml
ros2_try/isro_ws/install/: local_setup.sh
ros2_try/isro_ws/install/camera_feed_pub/lib/camera_feed_pub/: camera_feed_pub
ros2_try/isro_ws/install/camera_feed_pub/share/camera_feed_pub/: package.sh  package.zsh
ros2_try/isro_ws/install/camera_feed_pub/share/camera_feed_pub/cmake/: camera_feed_pubConfig.cmake
ros2_try/isro_ws/install/camera_pub/lib/camera_pub/: camera
ros2_try/isro_ws/install/camera_pub/share/camera_pub/: package.xml
ros2_try/isro_ws/install/orbslam_pub/share/orbslam_pub/: local_setup.dsv  package.dsv  package.sh  package.zsh
ros2_try/isro_ws/log/: latest_build
ros2_try/isro_ws/src/camera_feed_pub/: CMakeLists.txt
ros2_try/isro_ws/src/orbslam_pub/src/: orbslam_getpose.cpp
ros_ws/: settings.yaml  settings_imu.yaml  settings_webcam.yaml
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/camera_feed_pub/lib/camera_feed_pub/: camera_feed_pub
ros_ws/install/camera_feed_pub/share/camera_feed_pub/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
ros_ws/install/camera_pub/share/camera_pub/: package.sh
ros_ws/install/drone_control_pkg/share/drone_control_pkg/: package.sh
ros_ws/install/libmavconn/share/ament_index/resource_index/parent_prefix_path/: libmavconn
ros_ws/install/libmavconn/share/libmavconn/: local_setup.sh  package.sh
ros_ws/install/libmavconn/share/libmavconn/cmake/: libmavconnConfig.cmake
ros_ws/install/mavlink/lib/pkgconfig/: mavlink.pc
ros_ws/install/mavlink/share/mavlink/: package.sh
ros_ws/install/mavlink/share/mavlink/cmake/: mavlink-config.cmake
ros_ws/install/mavros/lib/mavros/: mavros_node
ros_ws/install/mavros/share/mavros/: local_setup.sh  package.sh
ros_ws/install/mavros/share/mavros/cmake/: mavrosConfig.cmake
ros_ws/install/mavros_extras/lib/mavros_extras/: servo_state_publisher
ros_ws/install/mavros_extras/share/mavros_extras/: local_setup.sh  package.sh
ros_ws/install/mavros_extras/share/mavros_extras/cmake/: mavros_extrasConfig.cmake
ros_ws/install/mavros_msgs/share/mavros_msgs/: local_setup.sh  package.sh
ros_ws/install/mavros_msgs/share/mavros_msgs/cmake/: mavros_msgsConfig.cmake
ros_ws/install/orbslam_pub/share/orbslam_pub/: local_setup.sh  package.bash  package.ps1  package.sh
ros_ws/install/orbslam_pub/share/orbslam_pub/cmake/: orbslam_pubConfig.cmake
ros_ws/install/py_img_sub/lib/py_img_sub/: py_img_sub
ros_ws/install/py_img_sub/share/py_img_sub/: package.dsv  package.ps1  package.sh
ros_ws/log/: latest_build  latest_list
ros_ws/src/camera_feed_pub/: package.xml
ros_ws/src/camera_feed_pub/src/: camera_feed_pub.cpp
ros_ws/src/drone_control_pkg/: package.xml  setup.py
ros_ws/src/drone_control_pkg/drone_control_pkg/: drone_controller.py  manual_controller.py  old_drone_controller.py
ros_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/src/install/drone_control_pkg/lib/drone_control_pkg/: drone_controller
ros_ws/src/install/drone_control_pkg/share/drone_control_pkg/: package.sh
ros_ws/src/install/py_img_sub/share/py_img_sub/: package.bash  package.sh  package.xml  package.zsh
ros_ws/src/log/: latest_build
ros_ws/src/orbslam_pub/: CMakeLists.txt  package.xml
ros_ws/src/orbslam_pub/src/: orbslam_getpose.cpp
slam_on_vid/: CMakeLists.txt  plot_trajectory.py  scale_test.txt  settings.yaml  settings_phone.yaml  settings_rpicam_v2.yaml  settings_webcam.yaml  trajectory.txt
slam_on_vid/compare_traj/: compare_traj.py  full_drone_vid_traj.txt  hovering_part_drone_vid_traj.txt
slam_on_vid/src/: main.cc
(+105 files in other folders)
